--- a/front.html
+++ b/front.html
@@ -42,7 +42,7 @@
                     }
                     </style>
               <a class="navbar-brand" href="" style="font-family:Impact, fantasy;">
-                <img src="" alt="" width="40" class="d-inline-block align-text-top">
+                <img src="logo.png" alt="" width="40" class="d-inline-block align-text-top">
                
                 TRAIL BLAZERS
                 
@@ -79,6 +79,11 @@ Improves our creative aspects by designing our logo and new techniques in solvin
 It also helps us to differentiate between our group members and also pointing out the similarities between them.
             </p>
             </div>
+
+     <div style="text-align:center;">
+            <img style="width:675px; height:375px;" src="photo1.jpeg">
+          </div>
+
 
 
 
