--- a/front.html
+++ b/front.html
@@ -66,6 +66,16 @@
         
           </div>
 
+          <div style="text-align: center; font-family:Georgia, 'Times New Roman', Times, serif; font-size: xx-large;">
+            INTRODUCTION
+          </div>
+          <div style="font-size: x-large;">
+          <p>
+            Soft skills, often called people skills or emotional intelligence, are defined as the ability to interact amicably with others. Soft skills are an essential part of improving one’s ability to work with others and can have a positive influence on furthering one's career. Our college, FISAT, is conducting a soft skill training session which is coordinated by Mpower. This training session aims to improve the soft skills of the students and become better professionals who are ready to face the competitive world. 
+            We, TrailBlazers, are a group of eight students consisting of Keerthi, Jatin, Jeswin, Joel, Nadaneswar, Merin, Vaishnavi, and Tessa. Follow us on our journey as we break out of our shells and rediscover ourselves. This site is a reflection of our growth as competent and reliable individuals. We hope our journey inspires you to explore your own talents. As our tagline says, we innovate, create and become the trailblazers of future...
+            </p>
+            </div>
+
 
           <div style="text-align: center; font-family:Georgia, 'Times New Roman', Times, serif; font-size: xx-large;">
             Summary Of Day 1
