--- a/front.html
+++ b/front.html
@@ -76,6 +76,13 @@
             </p>
             </div>
 
+            <div style="text-align:center;">
+              <img style="width:675px; height:500px;" src="photo2.jpeg">
+            </div>
+<br>
+            <div style="text-align:center;">
+              <img style="width:675px; height:500px;" src="photo3.jpeg">
+            </div>
 
           <div style="text-align: center; font-family:Georgia, 'Times New Roman', Times, serif; font-size: xx-large;">
             Summary Of Day 1
