--- a/front.html
+++ b/front.html
@@ -54,11 +54,11 @@
 
           <div class="container-fluid" style="background-color: #cbd908;">
             <style>
-              .navbar-brand {
+              #one {
                 font-size: 20px;
               }
               </style>
-        <a class="navbar-brand" >
+        <a class="navbar-brand" id="one" >
           
           INNOVATE,CREATE,TRAIL BLAZERS
           <img src="https://em-content.zobj.net/source/skype/289/fire_1f525.png" alt="" width="40" class="d-inline-block align-text-top">
